# weztermocil

./: .gitignore  Cargo.toml  LICENSE.md  README.md  default.nix  flake.nix  toolchain.toml  weztermocil.yml
samples/: _multiple_windows.yml
src/: layout.rs  lib.rs  main.rs  wezterm.rs
src/wezterm/: cli.rs  pane.rs  tab.rs
