[package]
name = "weztermocil"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.4.2", features = ["derive"] }
shellexpand = "3.1.0"
